--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -2,18 +2,18 @@ body {
   margin: 0;
 }
 
-.main__container {
+.home-page__container {
   height: 100vh;
   width: 100vw;
 }
 
-.main__sidemenu {
+.home-page__side-menu {
   float: left;
   width: 30%;
   height: 100%;
 }
 
-.main__detailview {
+.home-page__detail-view {
   float: right;
   width: 70%;
   height: 100%;
