--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -1,9 +1,23 @@
 .task {
   width: 100%;
+  cursor: pointer;
+}
+
+.task .task__content-selected-icon,
+.task__content-favorite-icon {
+  cursor: pointer;
+}
+
+.task .task__content-info input {
+  cursor: pointer;
+}
+
+.task:hover {
+  background-color: blue;
 }
 
 .task__container {
-  margin: 0px 20px;
+  margin: 0px 10px;
   padding: 10px 0px;
   border-bottom: 1px solid black;
 }
@@ -15,9 +29,25 @@
   grid-template-rows: 100%;
 }
 
+/* New Task */
+.task-editable {
+  cursor: text;
+}
+
+.task-editable .task__content-info input {
+  cursor: text;
+}
+
+.task-editable:hover {
+  background-color: transparent !important;
+}
+
+/* TASK INPUT */
 .task__content-info input {
   border: 0;
   width: 100%;
+  height: 100%;
+  background-color: transparent;
 }
 
 .task__content-info input::placeholder {
